crates/leaf-macros/tests/ui/state_field_without_inject_ctor_is_not_injectable.stderr
error[E0277]: the trait bound `Atomic<u64>: Injectable` is not satisfied
  --> tests/ui/state_field_without_inject_ctor_is_not_injectable.rs:14:11
   |
14 |     hits: AtomicU64,
   |           ^^^^^^^^^ the trait `Injectable` is not implemented for `Atomic<u64>`
   |
help: the following other types implement trait `Injectable`
  --> $WORKSPACE/crates/leaf-core/src/injectable.rs
   |
   | impl<X: ?Sized + Resolve> Injectable for Ref<X> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `leaf_core::Ref<X>`
...
   | impl<T: Bean> Injectable for Lookup<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Lookup<T>`
...
   | impl<T: Bean> Injectable for LazyRef<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `LazyRef<T>`
